/*
 * Copyright (c) 2019 - now, Eggroll Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *
 */

syntax = "proto3";

package com.webank.eggroll.core.transfer;

message TransferHeader {
  int32 id = 1;
  string tag = 2;
  int64 totalSize = 3;
  string status = 4;
  bytes ext = 5;
}

message TransferBatch {
  TransferHeader header = 1;
  int64 batchSize = 2;
  bytes data = 3;
}

message RollSiteHeader {
  string rollSiteSessionId = 1;
  string name = 2;
  string tag = 3;
  string srcRole = 4;
  string srcPartyId = 5;
  string dstRole = 6;
  string dstPartyId = 7;
  string dataType = 8;
  map<string, string> options = 10;
  int32 totalPartitions = 15;
  int32 partitionId = 16;
  int64 totalStreams = 17;
  int64 totalBatches = 18;
  int64 streamSeq = 20;
  int64 batchSeq = 21;
  string stage = 30;
}

// TODO: use transfer lib
service TransferService {
  rpc send (stream TransferBatch) returns (TransferBatch);
  rpc recv (TransferBatch) returns (stream TransferBatch);
  rpc sendRecv (stream TransferBatch) returns (stream TransferBatch);
}

